--- a/tests/bcr/MODULE.bazel
+++ b/tests/bcr/MODULE.bazel
@@ -18,6 +18,7 @@ local_path_override(
     path = "../..",
 )
 
+bazel_dep(name = "bazel_skylib", version = "1.6.1")
 bazel_dep(name = "gazelle", version = "0.33.0")
 bazel_dep(name = "protobuf", version = "3.19.6")
 
@@ -26,13 +27,13 @@ bazel_dep(name = "protobuf", version = "3.19.6")
 bazel_dep(name = "toolchains_protoc", version = "0.2.1")
 
 go_sdk = use_extension("@my_rules_go//go:extensions.bzl", "go_sdk")
+go_sdk.from_file(go_mod = "//:go.mod")
 go_sdk.download(
-    language_version = "1.21",
     patch_strip = 1,
     patches = [
         "//:test_go_sdk.patch",
     ],
-    version = "1.23.1",
+    version = "1.23.0",
 )
 
 # Request an invalid SDK to verify that it isn't fetched since the first tag takes precedence.
